--- a/PRGit/nbproject/project.properties
+++ b/PRGit/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Gesti\u00f3nDeInventarioImportPRFaltaAdmin
+application.title=ImportPRMiVersionGit
 application.vendor=juand_jus2zd
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Gesti_nDeInventarioImportPRFaltaAdmin.jar
+dist.jar=${dist.dir}/ImportPRMiVersionGit.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Gesti_nDeInventarioImportPRFaltaAdmin
+dist.jlink.output=${dist.jlink.dir}/ImportPRMiVersionGit
 endorsed.classpath=
 excludes=
 file.reference.postgresql-42.7.1.jar=D:\\EPN\\2023-B\\IngSoftwareRequerimientos\\Proyecto\\postgresql-42.7.1.jar
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Gesti_nDeInventarioImportPRFaltaAdmin
+jlink.launcher.name=ImportPRMiVersionGit
 main.class=moduloAdministracion.jFLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
